# 3D-Desmos

./: .gitmodules  CMakeLists.txt  LICENSE  hashtable.cpp  makeBuild.sh
Grapher3D/: CMakeLists.txt
Grapher3D/include/: Grapher3D.hpp  MathExpression.hpp
Grapher3D/src/: Grapher3D.cpp  MathExpression.cpp
Renderer/: CMakeLists.txt
Renderer/include/: Mesh.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  glUtils.h  gui.hpp
Renderer/src/: Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  glUtils.cpp  gui.cpp
main/: CMakeLists.txt
main/src/: main.cpp
res/: rect.vert  test.frag  test.vert
res/fonts/Anonymous_Pro/: desktop.ini
res/shaders/: cube.frag  cube.vert
res/shaders/textSDF/: simple.frag  simple.vert
