cmake_minimum_required(VERSION 3.8)

project("3D-Desmos")



##Include libraries
#add_subdirectory(lib/glew-cmake)
#add_subdirectory(lib/SDL)
#add_subdirectory(lib/stbImplimentation)//image library 
#add_subdirectory(lib/glm)//
#add_subdirectory(lib/freetype)//font cliff library



##Include sub-projects.
add_subdirectory("main")
